# YELL

./: .gitignore  CMakeCompilers.txt  CMakeLists.txt  benchmark_ntt.cc  example.cpp  radix4.cpp
include/yell/: Rq.h  Zq.h  arith.h  avx2.h  core.hpp  defines.h  gmp.hpp  gmp_impl.hpp  montgomery.hpp  ntt.hpp  ntt_impl.hpp  ops.hpp  params.hpp  params_32.hpp  params_64.hpp  poly.hpp  types.h
include/yell/details/: montgomery.hpp  ntt.hpp  poly.hpp
include/yell/prng/: FastGaussianNoise.hpp  fastrandombytes.h  randombytes.h
include/yell/util/: arith.h  mem.h
include/yell/utils/: math.hpp  mem.hpp
lib/: Rq.cc  Zq.cc  arith.cc  avx2.cpp  gmp.cpp  math.cpp  mem.cc  mem.cpp  montgomery.cpp  ntt.cpp  ops.cpp
